# gazebo_dog

./: .gitignore
src/LIO-SAM/config/: params.yaml  rviz2_test.rviz
src/LIO-SAM/launch/: lidar.launch.py
src/LIO-SAM/src/: mapOptmization.cpp
src/all_launch/: CMakeLists.txt  package.xml
src/all_launch/launch/: all.launch.py
src/all_launch/maps/: gazebo_map.pgm  gazebo_map.yaml
src/all_launch/pcd/: cloudCorner.pcd  cloudGlobal.pcd  cloudSurf.pcd  trajectory.pcd  transformations.pcd
src/custom_nav_planners/: CMakeLists.txt  package.xml  plugins.xml
src/custom_nav_planners/include/custom_nav_planners/: custom_global_planner.hpp  custom_local_planner.hpp
src/custom_nav_planners/src/: custom_global_planner.cpp  custom_local_planner.cpp
src/gazebo_cartographer/: CMakeLists.txt  README.md  package.xml
src/gazebo_cartographer/config/: cartographer_2d.lua  cartogrpher_localization.lua
src/gazebo_cartographer/launch/: cartographer.launch.py  cartographer_localization.launch.py
src/nav2/: CMakeLists.txt  package.xml
src/nav2/launch/: nav2.launch.py  navigate.launch.py
src/pcd2pgm/: package.xml
src/pcd2pgm/config/: pcd.yaml
src/pointcloud_to_laserscan/launch/: sample_pointcloud_to_laserscan_launch.py
src/unitree-go2-ros2/robots/configs/go2_config/launch/: gazebo_velodyne.launch.py
src/unitree-go2-ros2/robots/configs/go2_config/worlds/: playground.world
src/unitree-go2-ros2/robots/descriptions/go2_description/xacro/: robot_VLP.xacro
